--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
         <version>3.3.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>be.vlaanderen.informatievlaanderen.ldes</groupId>
-    <artifactId>MemberSeeder</artifactId>
+    <groupId>be.jobulcke.ldes</groupId>
+    <artifactId>LdesMemberSeeder</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>MemberSeeder</name>
-    <description>MemberSeeder</description>
+    <name>LdesMemberSeeder</name>
+    <description>LdesMemberSeeder</description>
     <url/>
     <licenses>
         <license/>
