feat: docker file provided

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>be.jobulcke.ldes</groupId>
-    <artifactId>LdesMemberSeeder</artifactId>
+    <artifactId>ldes-member-seeder</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>LdesMemberSeeder</name>
     <description>LdesMemberSeeder</description>
@@ -28,6 +28,8 @@
     </scm>
     <properties>
         <java.version>21</java.version>
+        <maven-assembly-plugin.version>3.6.0</maven-assembly-plugin.version>
+        <spring-boot.version>3.1.5</spring-boot.version>
     </properties>
     <dependencies>
         <dependency>
@@ -48,10 +50,22 @@
     </dependencies>
 
     <build>
+        <finalName>${project.artifactId}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>be.jobulcke.ldes.memberseeder.MemberSeederApplication</mainClass>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>build-info</goal>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
