--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -18,7 +18,7 @@ env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
   # github.repository as <account>/<repo>
-  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME: ldes-member-seeder
 
 
 jobs:
@@ -53,7 +53,10 @@ jobs:
       - name: Extract mvn project.version variable
         run: |
           export VERSION=$(mvn help:evaluate -Dexpression="project.version" -q -DforceStdout)
-          echo "version=$VERSION" >> $GITHUB_ENV
+          echo "IMAGE_TAG=$VERSION" >> $GITHUB_ENV
+          if [[ "${{ env.version }}" != *"SNAPSHOT"* ]]; then
+            echo "LATEST=latest" >> $GITHUB_ENV
+          fi
 
       # Login against a Docker registry except on PR
       # https://github.com/docker/login-action
@@ -72,6 +75,9 @@ jobs:
         uses: docker/metadata-action@v5.0.0
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=raw,value=${{env.IMAGE_TAG}}
+            type=raw,value=${{env.LATEST}}
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
