--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -42,12 +42,15 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3.0.0
 
-      - name: Extract mvn project.version variable
+      - name: Determine mvn project.version
         run: |
           export VERSION=$(mvn help:evaluate -Dexpression="project.version" -q -DforceStdout)
-          echo "IMAGE_TAG=$VERSION" >> $GITHUB_ENV
-          echo ${{ env.IMAGE_TAG }}
-          if [[ "$VERSION" != *"SNAPSHOT"* ]]; then
+          echo "version=$VERSION" >> $GITHUB_ENV
+
+      - name: Define Docker variables
+        run: |
+          echo "IMAGE_TAG"=${{ env.version }}
+          if [[ "${{ env.version }}" != *"SNAPSHOT"* ]]; then
             echo "LATEST=latest" >> $GITHUB_ENV
           fi
 
